--- a/Northwind.API/Northwind.API.csproj
+++ b/Northwind.API/Northwind.API.csproj
@@ -10,5 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0-preview.6.20312.4"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.0-preview.6.20312.4"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0-preview.6.20312.4"/>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1"/>
+    <PackageReference Include="AutoMapper" Version="10.0.0"/>
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.20"/>
   </ItemGroup>
 </Project>
